style(next): fix Firefox scrollbar styles overriding WebKit scrollbar styles

--- a/src/public/stylesheets/theme-next/forms.css
+++ b/src/public/stylesheets/theme-next/forms.css
@@ -731,3 +731,12 @@ input[type="range"] {
     scrollbar-color: var(--scrollbar-thumb-color) transparent;
     scrollbar-width: var(--scrollbar-thickness);
 }
+
+@supports selector(::-webkit-scrollbar) {
+    /* Prevent the scrollbar-color and scrollbar-width properties to override the custom styles
+     * defined using ::-webkit-scrollbar. */
+    :root {
+        scrollbar-color: unset;
+        scrollbar-width: unset;
+    }
+}
